--- a/thanks.html
+++ b/thanks.html
@@ -53,11 +53,14 @@
           <div class="news hide-md-down">
             <h3>CareCan Blog</h3>
 
-            <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a></p>
+            <p><a href="#">
+How many times have you complained about something? This is a great site to vent and a place to share your complaints. We do believe problems are to be addressed and not dismissed, denied or avoided. Recognizing and naming a problem are necessary first steps. It is the starting place of a process. A process that empowers people who have concerns to plan, act, and impact. CareCan exist to equip you to make your mark and this world a better place. Soon we will have a platform here on our site, where you are free to vent about your biggest complaints. Over time we will organize the complaints and create communities where your complaints may be effectively addressed.
+</a></p>
 
-            <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a></p>
+            <p><a href="#">Once you’ve had a change to vent. We’ll encourage you to evaluate and prioritize your concerns. Sometimes it is enough to vent; other times you may feel called to do more. At CareCan we have concepts and creative tools that will equip you to evaluate your willingness to address your concerns head on. Chances are, if it bothers you, someone else is frustrated by it too.
+</a></p>
 
-            <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a></p>
+            <p><a href="#">Our team consists of people like you. People who started off seeing problems, and then realized unmet market needs. We felt called to address our prioritized concerns. If it keeps you up at night, it’s quite possible you are being called to alleviate the burden. We are eager to share our experiences and empower you to make your mark and be the change you’d like to see in your community and our world.</a></p>
           </div>
 
 
