--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
           <h2>Contact Us</h2>
         </div>
         <div class="col-lg-9">
-          <form>
+          <form action="mailto:carecam@me.com" method="post" enctype="text/plain">
             Name:<br>
             <input type="text" name="name"><br>
             Email:<br>
@@ -65,9 +65,9 @@
             <input type="text" name="email"><br>
             How may we assist you?<br>
             <input type="text" name="assist" style="width:300px; height:300px;"><br><br>
-          </form>
-          <form action="thanks.html">
-            <input type="submit" value="Submit">
+            <form action="thanks.html">
+              <input type="submit" value="Send">
+            </form>
           </form>
         </div>
 
@@ -109,4 +109,4 @@
 </body>
 </html>
 
-<center>© 2017 We are on a relentless pursuit to help others achieve more with less</center>
+<center>© 2018 We are on a relentless pursuit to help others achieve more with less</center>
