--- a/campaign.html
+++ b/campaign.html
@@ -11,6 +11,7 @@
 
   <!-- styles -->
   <link rel="stylesheet" href="css/odin-0.10.4.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -45,47 +46,30 @@
         <div class="col-lg-9">
           <center>
           <h2>CareCan</h2>
-          <h3>We care, what do you care about?</h3>
+          <h3>When you care, you can.</h3>
           </center>
         </div>
-        <div class="col-lg-9">
-          <h2>Contact Us</h2>
-        </div>
-        <div class="col-lg-9">
-          <form action="mailto:carecam@me.com" method="post" enctype="text/plain">
-            Name:<br>
-            <input type="text" name="name"><br>
-            Email:<br>
-            <input type="text" name="email"><br>
-            Telephone Number:<br>
-            <input type="text" name="number"><br>
-            <!--drop down for county that includes Greenville, Spartanburg, or Other-->
-            County:<br>
-            <input type="radio" name="county" value="Greenville" checked>Greenville
-            <input type="radio" name="county" value="Spartanburg">Spartanburg
-            <input type="radio" name="county" value="Other">Other<br><br>
-            <!-- register voter- Yes or no radio button -->
-            Are You A Registered Voter?<br>
-            <input type="radio" name="registered" value="Yes" checked>Yes
-            <input type="radio" name="registered" value="No">No<br><br>
-            What issues concern you most?<br>
-            <input type="text" name="assist" style="width:300px; height:300px;"><br><br>
-            How may we assist you?<br>
-            <input type="text" name="assist" style="width:300px; height:300px;"><br><br>
-            <form action="thanks.html">
-              <input type="submit" value="Send">
-            </form>
-          </form>
-        </div>
+        <div class="row">
+          <div class="col-lg-9">
+            <center>
+              <h1>"On a relentless pursuit to help others achieve more with less"</h1>
+              <h4>- Shannon Pierce</h4>
+            </center>
+          </div>
+          <div class="col-lg-9">
+            <img src="img/cant.jpg">
+          </div>
 
         <!-- Begin sidebar -->
         <div class="col-lg-3">
           <div class="news hide-md-down">
             <h3>CareCan Blog</h3>
               <p.bold>Coming Soon…Vent Your Complaints Here</p>
+
             <p><a href="#">How many times have you complained about something? This is a great site to vent and a place to share your complaints. We do believe problems are to be addressed and not dismissed, denied or avoided. Recognizing and naming a problem are necessary first steps. It is the starting place of a process. A process that empowers people who have concerns to plan, act, and impact. CareCan exists to equip you to make your mark and this world a better place. Soon we will have a platform here on our site, where you are free to vent about your biggest complaints. Over time we will organize the complaints and create communities where your complaints may be effectively addressed.
             </a></p>
             <p.bold>Shifting Complaints to Concerns</p>
+
             <p><a href="#">Once you’ve had a chance to vent. We’ll encourage you to evaluate and prioritize your concerns. Sometimes it is enough to vent; other times you may feel called to do more. At CareCan we have concepts and creative tools that will equip you to evaluate your willingness to address your concerns head on. Chances are, if it bothers you, someone else is frustrated by it too.
             </a></p>
             <p.bold>Concerns to Creative Solutions</p>
@@ -116,4 +100,4 @@
 </body>
 </html>
 
-<center>© 2018 </center>
+<center>© 2018</center>
