--- a/construction.html
+++ b/construction.html
@@ -24,13 +24,13 @@
         <div class="navbar-menu">
           <button class="menu-dismiss" aria-label="Dismiss navigation">&times;</button>
           <ul>
-            <li><a href="construction.html">Campaigns</a></li>
-            <li><a href="construction.html">Consulting</a></li>
-            <li><a href="construction.html">Creations</a></li>
-            <li><a href="construction.html">Companies</a></li>
-            <li><a href="construction.html">Concepts</a></li>
-            <li><a href="construction.html">Capital</a></li>
-            <li><a href="construction.html">Colleagues</a></li>
+            <li><a href="campaign.html">Campaign</a></li>
+            <li><a href="construction.html">The 4th Congressional District</a></li>
+            <li><a href="construction.html">Shannon Cares</a></li>
+            <li><a href="construction.html">Action</a></li>
+            <li><a href="construction.html">Headquarters</a></li>
+            <li><a href="construction.html">Issues</a></li>
+            <li><a href="construction.html">Register To Vote</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
@@ -95,4 +95,4 @@
 </body>
 </html>
 
-<center>© 2018 We are on a relentless pursuit to help others achieve more with less</center>
+<center>© 2018</center>
