--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- styles -->
   <link rel="stylesheet" href="css/odin-0.10.4.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -24,13 +25,13 @@
         <div class="navbar-menu">
           <button class="menu-dismiss" aria-label="Dismiss navigation">&times;</button>
           <ul>
-            <li><a href="construction.html">Campaigns</a></li>
-            <li><a href="construction.html">Consulting</a></li>
-            <li><a href="construction.html">Creations</a></li>
-            <li><a href="construction.html">Companies</a></li>
-            <li><a href="construction.html">Concepts</a></li>
-            <li><a href="construction.html">Capital</a></li>
-            <li><a href="construction.html">Colleagues</a></li>
+            <li><a href="campaign.html">Campaign</a></li>
+            <li><a href="construction.html">The 4th Congressional District</a></li>
+            <li><a href="construction.html">Shannon Cares</a></li>
+            <li><a href="construction.html">Action</a></li>
+            <li><a href="construction.html">Headquarters</a></li>
+            <li><a href="construction.html">Issues</a></li>
+            <li><a href="construction.html">Register To Vote</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
@@ -51,13 +52,31 @@
         <div class="row">
           <div class="col-lg-9">
             <center>
-              <h1>"We are on a relentless pursuit to help others achieve more with less"</h1>
+              <h1>"On a relentless pursuit to help others achieve more with less"</h1>
               <h4>- Shannon Pierce</h4>
             </center>
           </div>
-          <div class="col-lg-9">
-            <img src="img/cant.jpg">
+          <div class="row">
+            <div class="col-lg-9">
+              <center>
+                <h2>Please Vote In The Republican Primary June 6th!</h2>
+              </center>
+            </div>
+          <div class="col-lg-9" id="newsletter">
+            <h2 class="newsletter">Sign Up For Our Newsletter</h2>
           </div>
+            <div class="col-lg-9">
+              <form action="mailto:carecam@me.com" method="post" enctype="text/plain">
+                Name:<br>
+                <input type="text" name="name"><br>
+                Email:<br>
+                <input type="text" name="email"><br><br>
+
+                <form action="thanks.html">
+                  <input type="submit" value="Send">
+                </form>
+              </form>
+            </div>
 
         <!-- Begin sidebar -->
         <div class="col-lg-3">
@@ -99,4 +118,4 @@
 </body>
 </html>
 
-<center>© 2018 We are on a relentless pursuit to help others achieve more with less</center>
+<center>© 2018<a href="contact.html"> Click here to share your cares!</a> </center>
